--- a/index.html
+++ b/index.html
@@ -94,307 +94,51 @@
 </section>
 
 
-         <section id="skills" class="page">
-  <div class="content">
-    <h2>Skills</h2>
-    <div class="skill-grid-columns">
+         <!-- Data Protection & Information Hiding Techniques -->
+<div class="skill-box">
+  <h3>Data Protection & Information Hiding Techniques</h3>
 
-      <!-- Languages & Scripting -->
-      <div class="skill-box">
-        <h3>Languages & Scripting</h3>
-        <div class="skill" data-val="90">
-          <label>Python</label>
-          <div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Matplotlib</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="85">
-          <label>Bash</label>
-          <div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Shell Scripting</label>
-          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>HTML</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>NumPy</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-      </div>
-
-      <!-- Security & Pentesting -->
-      <div class="skill-box">
-        <h3>Security & Pentesting</h3>
-        <div class="skill" data-val="85">
-          <label>VAPT</label>
-          <div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>WAPT</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Threat Management</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="78">
-          <label>Burp</label>
-          <div class="bar"><div class="fill" data-val="78"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="78">
-          <label>Nmap</label>
-          <div class="bar"><div class="fill" data-val="78"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Internet Security</label>
-          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Network Security</label>
-          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
-        </div>
-      </div>
-
-      <!-- Forensic & OSINT -->
-      <div class="skill-box">
-        <h3>Forensic & OSINT</h3>
-        <div class="skill" data-val="90">
-          <label>Digital Forensic</label>
-          <div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="85">
-          <label>Computer Forensic</label>
-          <div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Mobile Forensic</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Network Forensic</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Social Engineering</label>
-          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Information Gathering</label>
-          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Blue Team</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-      </div>
-
-      <!-- Operating Systems -->
-      <div class="skill-box">
-        <h3>Operating Systems</h3>
-        <div class="skill" data-val="85">
-          <label>Unix</label>
-          <div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="90">
-          <label>GNU/Linux</label>
-          <div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Ubuntu</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Kali Linux</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Black Arch</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Parrot</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Windows (as always)</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-      </div>
-
-      <!-- Tools -->
-      <div class="skill-box">
-        <h3>Tools</h3>
-        <div class="skill" data-val="85">
-          <label>Nmap</label>
-          <div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Autopsy</label>
-          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>SPF (Smartphone Forensic)</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Magnet AXIOM</label>
-          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>FTK Imager</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>ZAP</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Wireshark</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>WhatWeb / Wappalyzer</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>OpenVAS</label>
-          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Nessus</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Nikto</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Netcat</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Telnet</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Netdiscover</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Angry IP Scanner</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Advanced IP Scanner</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>And Many More</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-      </div>
-
-      <!-- AI & ML -->
-      <div class="skill-box">
-        <h3>Artificial Intelligence & Machine Learning</h3>
-        <div class="skill" data-val="80">
-          <label>AI Prompting</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Machine Learning (ML)</label>
-          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
-        </div>
-      </div>
-
-      <!-- Data Protection & Info Hiding -->
-      <div class="skill-box">
-        <h3>Data Protection & Information Hiding Techniques</h3>
-        <div class="skill" data-val="70">
-          <label>Cryptography</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Steganography</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Steganalysis</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Obfuscation</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Encoding</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Watermarking</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Quantum Cryptography</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Format-Preserving Encryption (FPE)</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-      </div>
-
-    </div>
+  <div class="skill" data-val="70">
+    <label>Cryptography</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
   </div>
-</section>
 
-<style>
-/* Uniform skill box */
-.skill-grid-columns {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 15px; /* gap komano */
-}
-.skill-box {
-  background: #f8f9fa;
-  padding: 15px;
-  border-radius: 8px;
-  min-height: 350px;  /* ekoi height */
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.skill-box h3 {
-  text-align: center;
-  margin-bottom: 10px;
-}
-.skill {
-  margin-bottom: 6px; /* kom gap */
-}
-.bar {
-  background: #ddd;
-  border-radius: 6px;
-  overflow: hidden;
-  height: 10px;
-  margin-top: 3px;
-}
-.fill {
-  background: #1e90ff;
-  height: 100%;
-  width: 0;
-  transition: width 1s ease-in-out;
-}
-.percent {
-  font-size: 12px;
-  margin-left: 5px;
-}
-</style>
+  <div class="skill" data-val="70">
+    <label>Steganography</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Steganalysis</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Obfuscation</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Encoding</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Watermarking</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Quantum Cryptography</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Format-Preserving Encryption (FPE)</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+</div>
 
 
 
